# oo_amxx

./: .env.example  .gitignore  AMBuildScript  CMakeLists.txt  README.md  configure.py  oo.cpp  oo_amxx.cpp  oo_asm.cpp  oo_call.cpp  oo_forward.cpp  oo_manager.cpp  oo_native.cpp
include/: HashPolicy.h  moduleconfig.h  oo_asm.h  oo_call.h  oo_class.h  oo_defs.h  oo_forward.h  oo_manager.h  oo_natives.h  oo_object.h  oo_ustring.h
plugins/: AMBuilder  oo.sma  oo_hook.sma  oo_multiple_inheritance.sma  oo_var_ext.sma
plugins/include/: oo.inc  oo_var.inc
plugins/includes/: oo.inc
plugins/tests/: oo_animal.sma  oo_multiple_inheritance.sma
